crates/dsrs-macros/tests/ui/missing_input.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct MissingInput {
    #[output]
    answer: String,
}

fn main() {}
